--- a/style.css
+++ b/style.css
@@ -7,14 +7,20 @@ body {
   }
 }
 
-.square {
+#second-page {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#square {
   display: flex;
   justify-content: center;
   gap: 100px;
   margin-bottom: 100px;
 }
 
-.game {
+#game {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,20 +28,38 @@ body {
   margin-top: 20px;
 }
 
-.inner_square {
-  width: 350px;
-  height: 350px;
+.player-board {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-shrink: 0;
+
+  gap: 2rem;
+
+  width: 464px;
+  font-size: 25px;
+  text-align: center;
+  background: #f2faff;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.25);
+  height: 559px;
+  border-radius: 17px;
+}
+
+.bingo-matrix {
+  width: 450px;
+  height: 450px;
   background: #f08b82;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 32px;
+  gap: 10px;
 
   .row {
     display: flex;
     align-items: flex-start;
-    gap: 32px;
+    gap: 10px;
   }
 
   .number {
